%%{init: {
  "theme":"base",
  "themeVariables": {
    "fontFamily":"Helvetica, Arial, sans-serif",
    "primaryColor":"#FFF8DC",
    "primaryBorderColor":"#444444",
    "primaryTextColor":"#1F2A44",
    "lineColor":"#1F4E79",
    "secondaryColor":"#FFE7CE",
    "tertiaryColor":"#E8F0E8"
  },
  "class":{"htmlLabels":true}
}}%%
classDiagram
    direction LR

    %% =====================================================================
    %%  Sous-domaine GÉOGRAPHIE
    %% =====================================================================
    class Continent {
      <<entity>>
      -id : Long
      -nom : String
    }
    class Pays {
      <<entity>>
      -id : Long
      -code : String
      -nom : String
    }
    class Region {
      <<entity>>
      -id : Long
      -nom : String
    }
    class Ville {
      <<entity>>
      -id : Long
      -nom : String
      -codePostal : String
    }

    Continent "1" o-- "0..*" Pays   : contient
    Pays      "1" o-- "0..*" Region : possède
    Region    "1" o-- "0..*" Ville  : regroupe

    %% =====================================================================
    %%  Sous-domaine ORGANISATION RH (5 niveaux)
    %% =====================================================================
    class OrgPays        { <<entity>>\n -id : Long\n -nom : String }
    class OrgCompagnie   { <<entity>>\n -id : Long\n -nom : String }
    class OrgDepartement { <<entity>>\n -id : Long\n -nom : String }
    class OrgSection     { <<entity>>\n -id : Long\n -nom : String }
    class OrgGroupe      { <<entity>>\n -id : Long\n -nom : String }

    OrgPays        "1" *-- "1..*" OrgCompagnie    : héberge
    OrgCompagnie   "1" *-- "1..*" OrgDepartement  : compose
    OrgDepartement "1" *-- "1..*" OrgSection      : compose
    OrgSection     "1" *-- "1..*" OrgGroupe       : compose

    %% =====================================================================
    %%  PERSONNES — héritage abstrait
    %% =====================================================================
    class Personne {
      <<abstract>>
      -id : Long
      -prenom : String
      -nom : String
      -sexe : Char
      -dateNaissance : Date
      +age() int
      +nomComplet() String
    }

    class Employe {
      <<entity>>
      -dateEmbauche : Date
      -dateDepart : Date
      -salaire : Decimal
      -rue : String
      +estActif() bool
      +anciennete() int
    }

    class Client {
      <<entity>>
      -actif : bool
      -creeLe : Date
      +aCarteFidelite() bool
      +chiffreAffaireVie() Decimal
    }

    Personne <|-- Employe
    Personne <|-- Client

    class ContratEmploye {
      <<entity>>
      -id : Long
      -dateDebut : Date
      -dateFin : Date
      -typeContrat : String
      +estOuvert() bool
    }

    class CarteFidelite {
      <<entity>>
      -id : Long
      -numeroCarte : String
      -dateEmission : Date
      -nomProgramme : String
    }

    class GroupeClient {
      <<entity>>
      -id : Long
      -nom : String
      -description : String
    }

    Employe "1" *-- "0..*" ContratEmploye : signe
    Employe "0..1" --> "0..*" Employe     : manage
    Employe "0..*" --> "1"    OrgGroupe   : rattaché à
    Employe "0..*" --> "0..1" Ville       : réside

    Client  "0..*" --> "0..1" GroupeClient  : appartient
    Client  "1"    o-- "0..1" CarteFidelite : adhère
    Client  "0..*" --> "1"    Ville         : réside

    %% =====================================================================
    %%  Sous-domaine PRODUITS (4 niveaux + historique prix + remises)
    %% =====================================================================
    class LigneProduit     { <<entity>>\n -id : Long\n -nom : String }
    class CategorieProduit { <<entity>>\n -id : Long\n -nom : String }
    class GroupeProduit    { <<entity>>\n -id : Long\n -nom : String }

    class Produit {
      <<entity>>
      -id : Long
      -nom : String
      -actif : bool
      -creeLe : Date
      +prixCourant(d : Date) Decimal
      +coutCourant(d : Date) Decimal
      +remiseActive(d : Date) Decimal
    }

    class Fournisseur {
      <<entity>>
      -id : Long
      -nom : String
    }

    class HistoriquePrix {
      <<entity>>
      -id : Long
      -dateDebut : Date
      -dateFin : Date
      -cout : Decimal
      -prixVente : Decimal
      +estCourant() bool
    }

    class RemiseProduit {
      <<entity>>
      -id : Long
      -dateDebut : Date
      -dateFin : Date
      -pct : Decimal
      +sApplique(d : Date) bool
    }

    LigneProduit     "1" *-- "1..*" CategorieProduit : compose
    CategorieProduit "1" *-- "1..*" GroupeProduit    : compose
    GroupeProduit    "1" *-- "1..*" Produit          : compose
    Fournisseur      "1" o-- "0..*" Produit          : fournit
    Fournisseur      "0..*" --> "1" Pays             : basé en
    Produit          "1" *-- "1..*" HistoriquePrix   : historise
    Produit          "1" *-- "0..*" RemiseProduit    : remise via

    %% =====================================================================
    %%  Sous-domaine COMMANDES
    %% =====================================================================
    class CanalVente {
      <<entity>>
      -id : Long
      -code : String
      -nom : String
    }

    class Commande {
      <<entity>>
      -id : Long
      -dateCommande : Date
      -montantTotal : Decimal
      -creeLe : Datetime
      +ajouterLigne(p : Produit, q : Decimal)
      +calculerTotal() Decimal
      +valider()
    }

    class LigneCommande {
      <<value>>
      -numeroLigne : short
      -quantite : Decimal
      -prixUnitaire : Decimal
      -coutUnitaire : Decimal
      -pctRemise : Decimal
      +montantBrut() Decimal
      +montantNet() Decimal
      +marge() Decimal
    }

    Commande "1" *-- "1..*" LigneCommande : composé de
    Commande "0..*" --> "1" Client       : passée par
    Commande "0..*" --> "1" Employe      : enregistrée par
    Commande "0..*" --> "1" CanalVente   : via canal
    LigneCommande "0..*" --> "1" Produit : porte sur
